tests/sintaxis/should_pass/only_bool_methods_defined.tds
program
begin
	bool fun(integer w)
		begin
			integer a;
			integer b;
			return (w == a + b);
		end

	bool main()
		begin
			integer h;
			return fun(h);
		end
end