tests/sintaxis/should_fail/test5Wrong.tds
//Este test deberia fallar porque una func bool debe tener una sentencia return
program
begin
	bool fun(integer w)
		begin
			integer ab;
			integer bc;

			ab = 5;
			bc = 10;
		end

	void main()
		begin
			integer h;
			bool w;
			h = 10;
			w = true;
		end
end